--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -577,77 +577,75 @@
       width: 100%;
       padding-bottom: .5rem;
 
+      .collection-logo {
+        width: 3rem;
+        height: 3rem;
+        margin-right: .5rem;
+        flex-shrink: 0;
 
+        .img-container {
+          width: 100%;
+          height: 100%;
 
-
-      .collection-title {
-        align-items: center;
-        display: flex;
-        width: 100%;
-
-        .collection-logo {
-          width: 3rem;
-          height: 3rem;
-          margin-right: .5rem;
-
-          .img-container {
-            width: 100%;
+          .img-responsive {
+            border-radius: 99%;
+            box-shadow: 0 .2rem .8rem rgba($dark-color, .2);
+            font-size: 1rem;
             height: 100%;
-
-            .img-responsive {
-              border-radius: 99%;
-              box-shadow: 0 .2rem .8rem rgba($dark-color, .2);
-              font-size: 1rem;
-              height: 100%;
-              object-fit: cover;
-              width: 100%;
-            }
+            object-fit: cover;
+            width: 100%;
           }
+        }
+
+      }
+
+      .collection-base-info {
+        display: flex;
+        flex: 1;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: .2rem;
+
+        .collection-name {
+          width: 100%;
+          max-width: 12rem;
+          text-overflow: ellipsis;
+          font-size: 1rem;
+          font-weight: 900;
+          overflow: hidden;
+          white-space: nowrap;
 
         }
 
-        .collection-base-info {
+        .collection-address {
           display: flex;
-          flex: 1;
-          flex-direction: column;
-          align-items: flex-start;
-          gap: .2rem;
+          font-size: .7rem;
+          font-weight: 700;
+          color: rgba($dark-color, .75)
+        }
 
-          .collection-name {
-            font-size: 1rem;
-            font-weight: 900;
-            text-wrap: nowrap;
-          }
+        .collection-media {
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
+          gap: .5rem;
 
-          .collection-address {
-            display: flex;
-            font-size: .7rem;
-            font-weight: 700;
-            color: rgba($dark-color, .75)
-          }
+          .media-item {
+            width: 1rem;
+            height: 1rem;
 
-          .collection-media {
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            gap: .5rem;
-            .media-item {
-              width: 1rem;
-              height: 1rem;
+            &:hover {
+              transition: all .5s ease;
+              scale: 1.1;
+            }
 
-              &:hover {
-                transition: all .5s ease;
-                scale: 1.1;
-              }
+            .media-img {
+              width: 100%;
+              height: 100%;
 
-              .media-img {
-                width: 100%;
+              .img-placeholder {
                 height: 100%;
-
-                .img-placeholder {
-                  height: 100%;
-                  border-radius: 100%;
-                }
+                border-radius: 100%;
               }
             }
           }
