--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -431,13 +431,6 @@
     max-width: $size-xl;
     width: 100%;
 
-    .preview-main {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      align-items: center;
-    }
-
     @media screen and (max-width: $size-md) {
       flex-direction: column;
       height: 98vh;
@@ -477,7 +470,6 @@
     position: relative;
 
     &.preview-image-poap {
-
       .img-container {
         border-radius: 50%;
       }
@@ -500,164 +492,37 @@
     }
   }
 
-
-
   .preview-content {
     background: lighten($bg-color, 5%);
     border-radius: .8rem;
-    padding: 1.5rem;
+    padding: 2rem;
     position: relative;
     width: 100%;
     word-break: break-word;
 
-    .collection-description {
-      display: flex;
-      flex-wrap: wrap;
-      gap: .2rem;
-      margin-bottom: .5rem;
-
-      .description-content {
-        font-size: .65rem;
-        font-weight: 700;
-        word-break: break-all;
-        overflow: hidden;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-      }
-
-      .display-ellipsis {
-        -webkit-line-clamp: unset;
-        -webkit-box-orient: unset;
-      }
-
-      .read-more {
-        font-weight: 700;
-        font-size: .3rem;
-        cursor: pointer;
-        color: var(--primary);
-        text-decoration: underline;
-      }
-    }
-
-
-    .collection-info {
-      width: 100%;
-      gap: 1rem;
-      display: flex;
-      flex-wrap: wrap;
-
-      .info-item {
-        width: 45%;
-        display: flex;
-        flex-direction: column;
-
-        .info-name {
-          font-weight: 400;
-          font-size: .6rem;
-          line-height: 1.1;
-          letter-spacing: -.24px;
-          color: #595959;
-          margin-bottom: .2rem;
-        }
-
-        .info-value {
-          font-weight: 600;
-          font-size: .8rem;
-          color: #121212
-        }
-      }
-
-    }
-
-    .collection-header {
-      display: flex;
-      justify-content: space-between;
+    .collection-title {
       align-items: center;
-      width: 100%;
+      display: flex;
       padding-bottom: .5rem;
 
       .collection-logo {
-        width: 3rem;
-        height: 3rem;
-        margin-right: .5rem;
-        flex-shrink: 0;
+        flex: 0 0 1.2rem;
+        margin-right: .25rem;
 
-        .img-container {
-          width: 100%;
-          height: 100%;
-
-          .img-responsive {
-            border-radius: 99%;
-            box-shadow: 0 .2rem .8rem rgba($dark-color, .2);
-            font-size: 1rem;
-            height: 100%;
-            object-fit: cover;
-            width: 100%;
-          }
-        }
-
-      }
-
-      .collection-base-info {
-        display: flex;
-        flex: 1;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: .2rem;
-
-        .collection-name {
-          width: 100%;
-          max-width: 12rem;
-          text-overflow: ellipsis;
+        .img-responsive {
+          border-radius: .4rem;
+          box-shadow: 0 .2rem .8rem rgba($dark-color, .2);
           font-size: 1rem;
-          font-weight: 900;
-          overflow: hidden;
-          white-space: nowrap;
-
-        }
-
-        .collection-address {
-          display: flex;
-          font-size: .7rem;
-          font-weight: 700;
-          color: rgba($dark-color, .75)
-        }
-
-        .collection-media {
-          display: flex;
-          align-items: center;
-          justify-content: flex-start;
-          gap: .5rem;
-
-          .media-item {
-            width: 1rem;
-            height: 1rem;
-
-            &:hover {
-              transition: all .5s ease;
-              scale: 1.1;
-            }
-
-            .media-img {
-              width: 100%;
-              height: 100%;
-
-              .img-placeholder {
-                height: 100%;
-                border-radius: 100%;
-              }
-            }
-          }
+          height: 1.2rem;
+          object-fit: cover;
+          width: 1.2rem;
         }
       }
-    }
 
-
-
-    .collection-price {
-      font-weight: 600;
-      margin-bottom: .8rem;
+      .collection-name {
+        font-size: .65rem;
+        font-weight: 700;
+      }
     }
 
     .nft-header-name {
@@ -677,10 +542,12 @@
       gap: .5rem;
 
       .traits-card {
-        border: .05rem solid rgba($dark-color, 0.05);
+        background: $bg-color;
+        border: .05rem solid rgba($dark-color, 0.01);
         box-shadow: 0 .2rem .8rem -.2rem rgba($dark-color, 0.1);
         border-radius: .4rem;
         color: $dark-color;
+        min-width: 3.5rem;
         text-transform: uppercase;
         padding: .2rem .4rem;
 
