chore: temp/ modal loading initial state

--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -75,6 +75,7 @@ body {
   z-index: 100;
 
   .web3bio-modal-container {
+    position: relative;
     background: #fff;
     border-radius: 1rem;
     height: 100%;
