--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -238,6 +238,7 @@
 
       .action {
         background: rgba($dark-color, .035);
+        font-size: .6rem;
         height: 100%;
       }
     }
