--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -44,35 +44,6 @@
     }
   }
 
-  .related-platforms {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 1rem;
-    margin: 1rem 0;
-    .main-platform{
-      width: 1.8rem;
-      height: 1.8rem;
-      box-shadow: .1rem .1rem .1rem rgba($dark-color, .5);
-    }
-    .platform-badge {
-      width: 1.6rem;
-      height: 1.6rem;
-      background: #fff;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      transition: all .2s ease;
-     
-      &:hover {
-        transform: scale(1.2);
-        box-shadow: 0 .2rem .2rem rgba($dark-color, .1);
-      }
-    }
-  }
-
   .profile-name {
     color: $dark-color;
     font-size: 1.8rem;
@@ -88,9 +59,11 @@
     align-items: center;
     color: $gray-color-dark;
     display: flex;
+    flex-wrap: wrap;
     margin-bottom: 1rem;
     font-size: .6rem;
     line-height: 1rem;
+    gap: .2rem;
 
     .action {
       color: $gray-color;
@@ -106,6 +79,71 @@
       &:hover {
         color: $dark-color;
       }
+    }
+
+    .platform-badge {
+      align-items: center;
+      background: rgba(#5298FF, .15);
+      border: .05rem solid transparent;
+      box-shadow: inset 0 0 .05rem rgba($dark-color, .1);
+      border-radius: .8rem;
+      cursor: pointer;
+      display: flex;
+      height: 1.5rem;
+      padding: .15rem;
+      text-decoration: none;
+      transition: all .2s ease;
+     
+      &:focus,
+      &:hover {
+        box-shadow: inset 0 0 .05rem rgba($dark-color, .1), 0 0 2rem rgba($dark-color, .1);
+      }
+
+      &.active {
+        box-shadow: inset 0 0 .05rem rgba($dark-color, .25);
+      }
+
+      &.ENS {
+        background: rgba(#5298FF, .1);
+        border-color: rgba(#5298FF, .35);
+
+        .platform-badge-icon {
+          color: #5298FF;
+        }
+      }
+
+      &.lens {
+        background: rgba(#BDFC5A, .25);
+        border-color: rgba(#BDFC5A, .5);
+
+        .platform-badge-icon {
+          color: #204F24;
+        }
+      }
+
+      &.farcaster {
+        background: rgba(#8465CB, .1);
+        border-color: rgba(#8465CB, .25);
+
+        .platform-badge-icon {
+          color: #8465CB;
+        }
+      }
+    }
+
+    .platform-badge-icon {
+      align-items: center;
+      border-radius: .7rem;
+      display: flex;
+      flex: 0 0 1.2rem;
+      height: 1.2rem;
+      justify-content: center;
+      padding: .2rem;
+      width: 1.2rem;
+    }
+
+    .platform-badge-name {
+      padding: 0 .3rem 0 .1rem;
     }
   }
 
