--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -308,13 +308,13 @@
   .label-ens {
     align-items: center;
     border-radius: .3rem;
-    color: lighten($dark-color, 20%);
+    color: lighten($dark-color, 25%);
     display: inline-flex;
     font-size: .6rem;
     line-height: .8rem;
-    margin: .2rem .2rem 0 0;
+    margin: .1rem .1rem 0 0;
     max-width: 12rem;
-    padding: .1rem .3rem .1rem .15rem;
+    padding: .1rem .15rem .1rem .15rem;
     text-decoration: none;
 
     span {
@@ -323,8 +323,9 @@
       white-space: nowrap;
     }
 
-    img {
-      flex: 0 0 .5rem;
+    .icon {
+      color: #5298FF;
+      flex: 0 0 .7rem;
       margin-right: .2rem;
     }
   }
