--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -267,8 +267,8 @@
 
     &.lens {
       .icon {
-        background: #BDFC5A;
-        color: #204F24;
+        background: #6bc674;
+        color: #ecf8ed;
       }
     }
 
