--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -85,7 +85,7 @@
       align-items: center;
       background: rgba(#5298FF, .15);
       border: .05rem solid transparent;
-      box-shadow: inset 0 0 .05rem rgba($dark-color, .1);
+      box-shadow: inset 0 0 .1rem rgba($dark-color, .1);
       border-radius: .8rem;
       cursor: pointer;
       display: flex;
@@ -96,7 +96,7 @@
      
       &:focus,
       &:hover {
-        box-shadow: inset 0 0 .05rem rgba($dark-color, .1), 0 0 2rem rgba($dark-color, .1);
+        box-shadow: inset 0 0 .1rem rgba($dark-color, .15), 0 0 2rem rgba($dark-color, .15);
       }
 
       &.active {
@@ -104,8 +104,8 @@
       }
 
       &.ENS {
-        background: rgba(#5298FF, .1);
-        border-color: rgba(#5298FF, .35);
+        background: lighten(#5298FF, 30%);
+        border-color: lighten(#5298FF, 20%);
 
         .platform-badge-icon {
           color: #5298FF;
@@ -113,17 +113,17 @@
       }
 
       &.lens {
-        background: rgba(#BDFC5A, .25);
-        border-color: rgba(#BDFC5A, .5);
+        background: lighten(#6bc674, 35%);
+        border-color: lighten(#6bc674, 25%);
 
         .platform-badge-icon {
-          color: #204F24;
+          color: #6bc674;
         }
       }
 
       &.farcaster {
-        background: rgba(#8465CB, .1);
-        border-color: rgba(#8465CB, .25);
+        background: lighten(#8465CB, 35%);
+        border-color: lighten(#8465CB, 25%);
 
         .platform-badge-icon {
           color: #8465CB;
@@ -136,10 +136,10 @@
       border-radius: .7rem;
       display: flex;
       flex: 0 0 1.2rem;
-      height: 1.2rem;
+      height: 1.3rem;
       justify-content: center;
-      padding: .2rem;
-      width: 1.2rem;
+      padding: .15rem;
+      width: 1.3rem;
     }
 
     .platform-badge-name {
