--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -87,7 +87,6 @@
       border: .05rem solid transparent;
       box-shadow: inset 0 0 .1rem rgba($dark-color, .1);
       border-radius: .8rem;
-      cursor: pointer;
       display: flex;
       height: 1.5rem;
       padding: .15rem;
@@ -127,6 +126,14 @@
 
         .platform-badge-icon {
           color: #8465CB;
+        }
+      }
+
+      &.nextid {
+        background: #121212;
+
+        .platform-badge-icon {
+          color: #fff;
         }
       }
     }
