--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -287,7 +287,7 @@ body {
   font-weight: 500;
   padding: .5rem;
   position: sticky;
-  z-index: 99;
+  z-index: 9;
   top: 90vh;
 }
 
@@ -309,7 +309,7 @@ body {
     z-index: 1;
 
     h3 {
-      font-size: .85rem;
+      font-size: 1rem;
       font-weight: 800;
     }
 
