--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -1,116 +1,120 @@
 //- Web3.bio Search
 .web3bio-search {
-    .search-form {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      position: relative;
-      transform: translateY(20vh);
-      transition: all .25s ease-in-out;
-      z-index: 99;
+  .search-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    position: relative;
+    transform: translateY(20vh);
+    transition: all .25s ease-in-out;
+    z-index: 99;
+  }
+
+  .web3bio-logo {
+    margin-bottom: .2rem;
+  }
+
+  .form-label {
+    font-size: 1.8rem;
+    font-weight: 900;
+    letter-spacing: -.05rem;
+    line-height: 1.15;
+    margin-bottom: 1rem;
+
+    @media screen and (max-width: $size-md) {
+      font-size: 2rem;
     }
-  
-    .web3bio-logo {
-      margin-bottom: .2rem;
+
+    small {
+      font-size: 1rem;
+      font-weight: 400;
     }
-  
-    .form-label {
-      font-size: 2.2rem;
-      font-weight: 900;
-      letter-spacing: -.05rem;
-      line-height: 1;
-      margin-bottom: 1rem;
-  
-      @media screen and (max-width: $size-md) {
-        font-size: 2rem;
-      }
-  
-      span {
-        font-weight: 400;
-      }
-    }
-  
-    .form-input-group {
-      margin: .3rem 0;
-      position: relative;
-  
-      .form-input {
-        border: transparent;
-        box-shadow: 0 .05rem .2rem rgba($dark-color, .1);
-        padding-right: 2.4rem;
-  
-        &:focus {
-          box-shadow: 0 .8rem 4rem rgba($dark-color, .25), 0 .05rem .2rem rgba($dark-color, .1);
-        }
-      }
-  
-      .form-button {
-        height: 2rem;
-        padding: 0;
-        position: absolute;
-        right: .2rem;
-        top: .2rem;
-        width: 2rem;
-      }
-  
-      .search-list {
-        animation: slide-down .2s ease 1;
-        background: #fff;
+  }
+
+  .form-input-group {
+    margin: .3rem 0;
+    position: relative;
+
+    .form-input {
+      border: transparent;
+      box-shadow: 0 .05rem .2rem rgba($dark-color, .1);
+      padding-right: 2.4rem;
+
+      &:focus {
         box-shadow: 0 .8rem 4rem rgba($dark-color, .25), 0 .05rem .2rem rgba($dark-color, .1);
+      }
+    }
+
+    .form-button {
+      height: 2rem;
+      padding: 0;
+      position: absolute;
+      right: .2rem;
+      top: .2rem;
+      width: 2rem;
+    }
+
+    .search-list {
+      animation: slide-down .2s ease 1;
+      background: #fff;
+      box-shadow: 0 .8rem 4rem rgba($dark-color, .25), 0 .05rem .2rem rgba($dark-color, .1);
+      border-radius: .4rem;
+      display: block;
+      left: 0;
+      overflow-y: auto;
+      padding: .5rem;
+      position: absolute;
+      top: 2.5rem;
+      width: 100%;
+      z-index: 100;
+
+      .search-list-item {
+        align-items: center;
         border-radius: .4rem;
-        display: block;
-        left: 0;
-        overflow-y: auto;
+        cursor: pointer;
+        display: flex;
         padding: .5rem;
-        position: absolute;
-        top: 2.5rem;
-        width: 100%;
-        z-index: 100;
-  
-        .search-list-item {
-          align-items: center;
-          border-radius: .4rem;
-          cursor: pointer;
-          display: flex;
-          padding: .5rem;
-          gap: .5rem;
-          transition: all .2s ease;
-  
-          &:focus,
-          &:hover {
-            background: rgba($dark-color, .05);
-          }
-  
-          &:not(:last-child) {
-            margin-bottom: .05rem;
-          }
-        }
-  
-        .search-list-item-active {
+        gap: .5rem;
+        transition: all .2s ease;
+
+        &:focus,
+        &:hover {
           background: rgba($dark-color, .05);
         }
+
+        &:not(:last-child) {
+          margin-bottom: .05rem;
+        }
       }
-    }
-  
-    &.focused {
-      .search-form {
-        transform: translateY(0);
-      }
-  
-      .form-label {
-        display: none;
-      }
-    }
-    .loading-container {
-      margin-top: 4rem;
-      .loading-subtitle{
-        width: 100%;
-        text-align: center;
-        font-size: .7rem;
+
+      .search-list-item-active {
+        background: rgba($dark-color, .05);
       }
     }
   }
-.global-loading{
+
+  &.focused {
+    .search-form {
+      transform: translateY(0);
+    }
+
+    .form-label {
+      display: none;
+    }
+  }
+
+  .loading-container {
+    margin-top: 4rem;
+
+    .loading-subtitle {
+      width: 100%;
+      text-align: center;
+      font-size: .7rem;
+    }
+  }
+}
+
+.global-loading {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -286,12 +290,6 @@
       }
     }
 
-    &.twitter {
-      .icon {
-        background: #4A99E9;
-        color: #fff;
-      }
-    }
     &.nextid {
       .icon {
         background: #121212;
