--- a/styles/_share.scss
+++ b/styles/_share.scss
@@ -11,6 +11,7 @@
 
   .profile-share-body {
     flex: 1;
+    gap: .2rem;
     padding: 1rem 0;
   }
 
@@ -26,11 +27,18 @@
     }
   }
 
+  .btn-group {
+    .btn {
+      gap: .2rem;
+    }
+  }
+
   .profile-card {
     border: .05rem solid rgba($dark-color, .075);
     border-radius: .8rem;
     box-shadow: 0 .1rem .2rem rgba($dark-color, .04);
     display: flex;
+    flex-direction: column;
     padding: 1rem;
 
     .card-avatar {
@@ -39,24 +47,28 @@
       .avatar {
         background: $gray-color;
         box-shadow: inset 0 0 0 .2rem rgba($light-color, .1);
-        height: 3.6rem;
-        width: 3.6rem;
+        height: 3.2rem;
+        width: 3.2rem;
       }
     }
 
     .card-content {
       flex: 1;
-      padding: .5rem 1rem;
+      padding: .5rem 0;
       width: 100%;
     }
 
     .card-name {
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       font-weight: 900;
     }
 
     .card-identity {
       color: $gray-color;
+    }
+
+    .qrcode-container {
+      align-self: flex-end;
     }
   }
 
