--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -84,7 +84,7 @@
 
     .platform-badge {
       align-items: center;
-      background: rgba(#5298FF, .15);
+      background: rgba(#121212, .05);
       border: .05rem solid transparent;
       box-shadow: inset 0 0 .1rem rgba($dark-color, .1);
       border-radius: .8rem;
@@ -123,6 +123,15 @@
 
         .platform-badge-icon {
           color: #8465CB;
+        }
+      }
+
+      &.dotbit {
+        background: lighten(#0e7dff, 45%);
+        border-color: lighten(#0e7dff, 40%);
+
+        .platform-badge-icon {
+          color: #0e7dff;
         }
       }
 
