--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -80,7 +80,7 @@ body {
     border-radius: 1rem;
     height: 100%;
     max-height: calc(100vh - 1rem);
-    max-width: calc(100vw - 1rem);
+    max-width: $size-xl;
     overflow-y: auto;
     padding: 2rem;
     scroll-behavior: smooth;
