--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -92,7 +92,7 @@
       padding: .15rem;
       text-decoration: none;
       transition: all .2s ease;
-     
+
       &:focus,
       &:hover {
         box-shadow: inset 0 0 .1rem rgba($dark-color, .15), 0 0 2rem rgba($dark-color, .15);
@@ -342,6 +342,7 @@
       font-size: .7rem;
       font-weight: 500;
       margin-bottom: 1rem;
+      text-decoration: none;
     }
   }
 
@@ -461,6 +462,37 @@
           height: 4rem;
           padding: .25rem;
           width: 4rem;
+        }
+      }
+    }
+  }
+
+  .profile-widget-rss {
+    width: 100%;
+
+    .widgets-rss-list {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      overflow-y: auto;
+      .rss-item {
+        width: 100%;
+        padding: .4rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        color: $gray-color;
+        font-size: .6rem;
+        border-bottom: 1px solid $gray-color;
+        .rss-item-title {
+          color: $dark-color;
+          font-size: .8rem;
+          font-weight: 500;
+        }
+        .rss-item-content{
+          color: $dark-color;
+          font-size: .6rem;
+          font-weight: 400;
         }
       }
     }
