--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -489,6 +489,10 @@
       }
     }
 
+    .emoji-large {
+      font-size: 1.2rem;
+    }
+
     .action-icon {
       position: absolute;
       right: 1rem;
@@ -509,6 +513,7 @@
         background: lighten($bg-color, 5%);
         border-radius: .4rem;
         flex: 1 0 12rem;
+        min-height: 5rem;
         padding: .75rem;
         text-decoration: none;
         transition: all .2s ease-in-out;
