--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -49,6 +49,7 @@
     color: $dark-color;
     font-size: 1.8rem;
     font-weight: 800;
+    letter-spacing: -.05em;
     line-height: 1.25;
     margin-bottom: .5rem;
     margin-top: 1rem;
