--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -17,7 +17,7 @@
   .form-label {
     font-size: 2.2rem;
     font-weight: 900;
-    letter-spacing: -.035em;
+    letter-spacing: -.05em;
     line-height: 1;
     margin: 1rem 0;
 
@@ -28,7 +28,7 @@
     small {
       font-size: .9rem;
       font-weight: 400;
-      letter-spacing: -.025em;
+      letter-spacing: -.015em;
     }
   }
 
@@ -39,6 +39,7 @@
     .form-input {
       border: transparent;
       box-shadow: 0 .05rem .2rem rgba($dark-color, .1);
+      font-size: .8rem;
       padding-right: 2.4rem;
 
       &:focus {
