Add more menu options

--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -67,6 +67,10 @@
     line-height: 1rem;
     gap: .2rem;
 
+    .profile-label {
+      font-size: .6rem;
+    }
+
     .action {
       color: $gray-color;
       cursor: pointer;
