--- a/styles/spectre/_menus.scss
+++ b/styles/spectre/_menus.scss
@@ -1,8 +1,9 @@
 // Menus
 .menu {
-  @include shadow-variant(.05rem);
+  @include shadow-variant(.1rem);
   background: $bg-color-light;
   border-radius: $border-radius;
+  font-size: .7rem;
   list-style: none;
   margin: 0;
   min-width: $control-width-xs;
@@ -17,7 +18,7 @@
 
   .menu-item {
     margin-top: 0;
-    padding: 0 $unit-2;
+    padding: 0 $unit-4;
     text-decoration: none;
     user-select: none;
 
@@ -25,19 +26,19 @@
       border-radius: $border-radius;
       color: inherit;
       display: block;
-      margin: 0 (-$unit-2);
-      padding: $unit-1 $unit-2;
+      margin: 0 (-$unit-4);
+      padding: $unit-2 $unit-2;
       text-decoration: none;
 
       &:focus,
       &:hover {
-        background: rgba($color: $dark-color, $alpha: 0.1);
+        background: rgba($color: $dark-color, $alpha: 0.05);
         color: $primary-color;
       }
 
       &:active,
       &.active {
-        background: rgba($color: $dark-color, $alpha: 0.1);
+        background: rgba($color: $dark-color, $alpha: 0.075);
         color: $primary-color;
       }
     }
