--- a/styles/spectre/_dropdowns.scss
+++ b/styles/spectre/_dropdowns.scss
@@ -1,6 +1,6 @@
 // Dropdown
 .dropdown {
-  display: inline-block;
+  display: inline-flex;
   position: relative;
 
   .menu {
@@ -27,7 +27,7 @@
   }
 
   // Fix dropdown-toggle border radius in button groups
-  .btn-group {
+  &.btn-group {
     .dropdown-toggle:nth-last-child(2) {
       border-bottom-right-radius: $border-radius;
       border-top-right-radius: $border-radius;
