--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -318,6 +318,8 @@
   .nfts {
     display: flex;
     flex-wrap: wrap;
+    gap: .1rem;
+    margin-top: .4rem;
   }
 
   .label-ens {
@@ -327,7 +329,6 @@
     display: inline-flex;
     font-size: .6rem;
     line-height: .8rem;
-    margin: .1rem .1rem 0 0;
     max-width: 12rem;
     padding: .1rem .15rem .1rem .15rem;
     text-decoration: none;
@@ -340,7 +341,7 @@
 
     .icon {
       color: #5298FF;
-      flex: 0 0 .7rem;
+      flex: 0 0 .8rem;
       height: 1rem;
       margin-right: .2rem;
       width: 1rem;
@@ -404,7 +405,7 @@
   .content-subtitle {
     align-items: center;
     display: flex;
-    font-size: .55rem;
+    font-size: .6rem;
     line-height: 1rem;
     max-width: 80%;
 
