--- a/styles/spectre/_layout.scss
+++ b/styles/spectre/_layout.scss
@@ -8,6 +8,10 @@
 
   $grid-spacing: ($layout-spacing / ($layout-spacing * 0 + 1)) * $html-font-size;
 
+  &.grid-2x {
+    max-width: $grid-spacing * 2 + $size-2x;
+  }
+
   &.grid-xl {
     max-width: $grid-spacing * 2 + $size-xl;
   }
