--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -67,15 +67,17 @@
     line-height: 1rem;
     gap: .2rem;
 
+    .btn-group {
+      gap: .1rem;
+    }
+
     .btn {
-      background: lighten($bg-color, 4%);
-      border: .05rem solid lighten($bg-color, 2%);
-      box-shadow: 0 .1rem .25rem rgba($dark-color, .02);
+      background: rgba($bg-color, .5);
       color: $gray-color-dark;
 
       &:focus,
       &:hover {
-        background: lighten($bg-color, 2%);
+        background: rgba($bg-color, .75);
         color: $dark-color;
       }
     }
@@ -328,10 +330,10 @@
         box-shadow: inset 0 0 0 .05rem rgba($dark-color, .1), 0 .2rem .4rem rgba($dark-color, .05), 1rem 0 6rem 3rem var(--widget-bg-color);
 
         img {
-          border-radius: .2rem;
-          height: 1.2rem;
+          border-radius: .3rem;
+          height: 1.4rem;
           position: absolute;
-          width: 1.2rem;
+          width: 1.4rem;
         }
       }
     }
@@ -525,8 +527,10 @@
         }
 
         .rss-item-title {
-          font-weight: 700;
           display: -webkit-box;
+          font-size: .8rem;
+          font-weight: 700;
+          line-height: 1.35;
           text-overflow: ellipsis;
           overflow: hidden;
           -webkit-box-orient: vertical;
@@ -536,15 +540,19 @@
         .rss-item-date {
           color: $gray-color;
           font-size: .6rem;
-          margin-top: .5rem;
+          margin-top: .25rem;
         }
 
         .rss-item-img {
           border-radius: .4rem;
           height: 4.8rem;
           margin-bottom: .5rem;
-          object-fit: cover;
+          object-fit: contain;
           width: 100%;
+
+          & + .rss-item-title {
+            font-size: .7rem;
+          }           
         }
       }
     }
