--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -458,10 +458,9 @@
     .widget-collection-list {
       display: flex;
       flex-wrap: nowrap;
-      height: 3.4rem;
       margin: 0 -1rem;
       overflow-x: auto;
-      padding: 0 1rem;
+      padding: 0 1rem .2rem 1rem;
 
       .poap-item {
         flex: 0 0 3.2rem;
@@ -514,7 +513,7 @@
       .rss-item {
         background: lighten($bg-color, 5%);
         border-radius: .4rem;
-        flex: 1 0 12rem;
+        flex: 0 0 12rem;
         min-height: 5rem;
         padding: .75rem;
         text-decoration: none;
