--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -290,8 +290,22 @@
       position: absolute;
       right: 1rem;
       top: 1rem;
-      color: #121212;
       cursor: pointer;
+
+      svg {
+        flex: 0 0 1rem;
+      }
+
+      .action-icon-label {
+        display: none;
+      }
+
+      &:focus,
+      &:hover {
+        .action-icon-label {
+          display: inline-flex;
+        }
+      }
     }
 
     &.profile-widget-link {
@@ -448,6 +462,7 @@
   .profile-widget-poap {
     aspect-ratio: auto;
     color: #463E68;
+    position: relative;
 
     .platform-icon {
       box-shadow: inset 0 0 0 .05rem rgba($dark-color, .05), 0 .2rem .4rem rgba($dark-color, .01), 2rem -4rem 6rem 10rem var(--widget-bg-color);
