--- a/styles/_share.scss
+++ b/styles/_share.scss
@@ -61,6 +61,7 @@
     .card-name {
       font-size: 1.4rem;
       font-weight: 900;
+      letter-spacing: -0.05em;
     }
 
     .card-identity {
