--- a/styles/_share.scss
+++ b/styles/_share.scss
@@ -34,55 +34,40 @@
   }
 
   .profile-card {
-    border: .05rem solid rgba($dark-color, .075);
-    border-radius: .8rem;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    min-height: 10rem;
     box-shadow: 0 .1rem .2rem rgba($dark-color, .04);
     display: flex;
+    border-radius: .5rem;
     flex-direction: column;
-    padding: 1rem;
+    background: rgba($dark-color, .04);
 
-    .card-avatar {
-      flex: 0;
+    @media screen and (max-width: $size-md) {
+      min-height: 8rem;
+    }
 
-      .avatar,
-      svg {
-        box-shadow: inset 0 0 0 .2rem rgba($light-color, .1);
-        height: 4rem;
-        width: 4rem;
+    .img-container {
+      position: relative;
+      overflow: hidden;
+      transition: filter 0.3s ease-out;
+      border-radius: .5rem;
+
+      .loaded .img-responsive {
+        filter: none;
+      }
+
+      .img-responsive {
+        border-radius: .5rem;
+        box-shadow: 0 .2rem 1rem rgba($dark-color, .15), 0 .05rem .2rem rgba($dark-color, .05);
+        font-size: 4rem;
+        object-fit: cover;
+        width: 100%;
+        filter: blur(8px);
+        transition: filter 0.3s ease-out;
       }
     }
-
-    .card-content {
-      flex: 1;
-      padding: .5rem 0;
-      width: 100%;
-    }
-
-    .card-name {
-      font-size: 1.4rem;
-      font-weight: 900;
-      letter-spacing: -0.05em;
-    }
-
-    .card-identity {
-      color: $gray-color;
-    }
-
-    .qrcode-container {
-      align-self: flex-end;
-    }
   }
 
-  .qrcode-container {
-    align-items: center;
-    border-radius: .6rem;
-    display: flex;
-    height: 3rem;
-    justify-content: center;
-    width: 3rem;
-
-    canvas {
-      transform: scale(.25);
-    }
-  }
 }
